GNOME Bugzilla – Bug 754808
video: missing alpha flag for some formats
Last modified: 2015-09-10 10:37:24 UTC
See attached patch, some formats use the wrong macro for initializing and are missing the alpha flags.
Created attachment 311029 [details] [review] video-format: add missing alpha flag for some formats Some formats didn't have the alpha flag marked, use the correct macro so they get it right.
commit df931fb0b8b79d3b4f8fd89746c1be7ef8b3a3d4 Author: Thiago Santos <thiagoss@osg.samsung.com> Date: Wed Sep 9 19:00:33 2015 -0300 video-format: add missing alpha flag for some formats Some formats didn't have the alpha flag marked, use the correct macro so they get it right. https://bugzilla.gnome.org/show_bug.cgi?id=754808